<resources>
    <string name="app_name">Conference</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_register">Verify Your Details</string>
    <string name="calendar_not_found">No compatible calendar application found.</string>
    <string name="permissions_snackbar">Run Time Permissions are not granted</string>
    <string name="permissions_dialog_title">Permissions Required</string>
    <string name="permissions_dialog_message">This application requires permissions in order to work correctly. Do you want to grant them now?</string>

    <!-- Strings related to registering the user -->
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
...
    <string name="speaker_position">Chairman and CEO, Salesforce</string>
    <string name="share">Share</string>
    <string name="connected_accounts">Connected Accounts</string>

    <!-- Strings related to fragment titles -->
    <string name="schedule_title">Schedule</string>
    <string name="profile_title">My Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="myschedule_title">My Schedule</string>

    <!-- Strings related to widgets like button, toasts, snackbar -->
    <string name="google_button">Connect with Google</string>
    <string name="facebook_button">Connect with Facebook</string>
    <string name="connected">Connected</string>
    <string name="dialog_title">Disconnect Account</string>
    <string name="dialog_message">Are you sure you want to disconnect this account?</string>
    <string name="save">Save Changes</string>
    <string name="save_toast">Changes Saved Successfully</string>
    <string name="edit_avatar">Edit Avatar</string>
    <string name="delete_avatar">Delete Avatar</string>
    <string name="select_avatar">Select your avatar</string>
    <string name="open_settings">Open Settings</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="remove_from_bookmarks">Remove from Bookmarks</string>

...
